--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,13 @@
         "drupal/core-composer-scaffold": "^9",
         "drupal/core-project-message": "^9",
         "drupal/core-recommended": "^9",
-        "drupal/olivero": "^1.0@beta"
+        "drupal/jquery_ui": "^1.4",
+        "drupal/jquery_ui_datepicker": "^1.0",
+        "drupal/jquery_ui_tabs": "^1.1",
+        "drupal/jquery_ui_tooltip": "^1.1",
+        "drupal/olivero": "^1.0@beta",
+        "drupal/webform": "^6.0.0",
+        "drush/drush": "^10.3"
     },
     "conflict": {
         "drupal/drupal": "*"
