--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "drupal/jquery_ui_tabs": "^1.1",
         "drupal/jquery_ui_tooltip": "^1.1",
         "drupal/olivero": "^1.0@beta",
+        "drupal/pathauto": "^1.8",
         "drupal/recaptcha": "^3.0",
         "drupal/webform": "^6.0.0",
         "drush/drush": "^10.3"
