--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -6,12 +6,14 @@ module:
   block: 0
   block_content: 0
   breakpoint: 0
+  captcha: 0
   ckeditor: 0
   color: 0
   comment: 0
   config: 0
   contact: 0
   contextual: 0
+  ctools: 0
   datetime: 0
   dblog: 0
   dynamic_page_cache: 0
@@ -38,18 +40,21 @@ module:
   path_alias: 0
   quickedit: 0
   rdf: 0
+  recaptcha: 0
   responsive_image: 0
   search: 0
   shortcut: 0
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   tour: 0
   update: 0
   user: 0
   views_ui: 0
   webform: 0
+  pathauto: 1
   views: 10
   standard: 1000
 theme:
