--- a/config/sync/captcha.captcha_point.user_login_form.yml
+++ b/config/sync/captcha.captcha_point.user_login_form.yml
@@ -1,6 +1,6 @@
-uuid: 0f45c0a5-df4f-4687-919a-4419b22e274a
+uuid: 47cbd40c-ffe5-40e2-998c-a3c885fc8b47
 langcode: en
-status: false
+status: true
 dependencies: {  }
 _core:
   default_config_hash: crLwyc9uwZ8Bv8lpMLIOEQYHOxW_mS49jaDf_95-o4I
