--- a/config/sync/captcha.captcha_point.user_pass.yml
+++ b/config/sync/captcha.captcha_point.user_pass.yml
@@ -1,6 +1,6 @@
-uuid: f0c5825c-45f9-45c2-9bb5-e6dfc31802e7
+uuid: 497ba6d6-3f41-4f48-918e-07801e28a1da
 langcode: en
-status: false
+status: true
 dependencies: {  }
 _core:
   default_config_hash: KV2eyuDk4Ux0da6fu6QsTUf_49rPDXilNurV5nRZqJE
