--- a/config/sync/bluetheme.settings.yml
+++ b/config/sync/bluetheme.settings.yml
@@ -8,7 +8,8 @@ logo:
   path: ''
 favicon:
   use_default: 0
-  path: ''
+  path: 'public://favicon.ico'
+  mimetype: image/vnd.microsoft.icon
 mobile_menu_all_widths: 0
 site_branding_bg_color: default
 debug: 0
