--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "drupal/codesnippet": "^1.7",
         "drupal/codetag": "^1.2",
         "drupal/core-composer-scaffold": "~9.1.0-beta1@dev",
-        "drupal/core-project-message": "^9",
+        "drupal/core-project-message": "~9.1.0-beta1@dev",
         "drupal/core-recommended": "~9.1.0-beta1@dev",
         "drupal/editor_advanced_link": "^1.8",
         "drupal/jquery_ui": "^1.4",
