--- a/web/themes/custom/bluetheme/bluetheme.info.yml
+++ b/web/themes/custom/bluetheme/bluetheme.info.yml
@@ -5,7 +5,7 @@ core: 8.x
 core_version_requirement: ^8 || ^9
 base theme: olivero
 libraries:
-  #- bluetheme/global-styling
+  - bluetheme/global-styling
 regions:
   header: Header
   primary_menu: 'Primary menu'
