--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "drupal/jquery_ui_tooltip": "^1.1",
         "drupal/metatag": "^1.14",
         "drupal/pathauto": "^1.8",
+        "drupal/pwa": "^1.4",
         "drupal/recaptcha": "^3.0",
         "drupal/webform": "^6.0.0",
         "drush/drush": "^10.3"
