--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/core-project-message": "~9.1.0",
         "drupal/core-recommended": "~9.1.0",
         "drupal/editor_advanced_link": "^1.8",
+        "drupal/google_tag": "^1.4",
         "drupal/jquery_ui": "^1.4",
         "drupal/jquery_ui_datepicker": "^1.0",
         "drupal/jquery_ui_tabs": "^1.1",
